Fixed posts not showing for subcategoreis

--- a/website/src/components/nav/style.css
+++ b/website/src/components/nav/style.css
@@ -28,7 +28,11 @@
   .mobileMenu{
       display:none
   }
-  
+  .sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+  }
 }
 @media only screen and (max-width:786px){
   nav{
